# working-bikes

./: .coafile  .coveragerc  .eslintrc.js  .flake8  .gitignore  .travis.yml  Pipfile  README.md  database.db  deploy.zsh  dev-requirements.txt  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  webpack.config.js  zappa_settings.json
apache/: django.wsgi
assets/css/: base.css  site.scss
assets/js/: index.js
base/templates/base/: base.html
configuration/: settings.py  storages.py  urls.py  wsgi.py
templates/: 404.html  500.html  __base.html  base.html
templates/admin/: add_event.html  base_site.html
volunteer/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
volunteer/migrations/: 0001_initial.py  0002_auto_20171024_2121.py  0002_auto__add_purchase.py  0003_auto_20171224_0424.py  0003_auto__add_field_purchase_date__add_field_event_hours.py  0004_auto_20180119_0400.py  0004_auto__del_unique_timesheet_volunteer_day.py  0005_auto_20180119_0436.py  0005_auto__add_field_timesheet_from_event.py  0006_auto__del_eventtask__del_event.py  0007_auto__del_volunteertask__add_task__add_field_timesheet_task.py  0008_auto__chg_field_volunteer_state__chg_field_timesheet_hours.py  0009_auto__chg_field_timesheet_hours.py  0010_auto__add_purchaseapproval.py  0011_auto__chg_field_purchase_date.py  0012_auto__add_field_task_active.py  0013_auto__add_pointsaward.py  0014_auto__add_field_pointsaward_date__add_field_pointsaward_awarded_by.py
workingBikes/: settings.py  urls.py  wsgi.py
working_bikes/: settings.py  urls.py  wsgi.py
(+11 files in other folders)
